--- a/pom.xml
+++ b/pom.xml
@@ -5,13 +5,55 @@
   <version>0.0.1-SNAPSHOT</version>
   
   <dependencies>
+
+      <!-- https://mvnrepository.com/artifact/org.mybatis/mybatis -->
+      <dependency>
+          <groupId>org.mybatis</groupId>
+          <artifactId>mybatis</artifactId>
+          <version>3.5.1</version>
+      </dependency>
+
+      <dependency>
+          <groupId>org.apache.commons</groupId>
+          <artifactId>commons-collections4</artifactId>
+          <version>4.3</version>
+      </dependency>
+
+      <!-- https://mvnrepository.com/artifact/com.google.guava/guava -->
+      <dependency>
+          <groupId>com.google.guava</groupId>
+          <artifactId>guava</artifactId>
+          <version>28.0-jre</version>
+      </dependency>
+
+      <!-- https://mvnrepository.com/artifact/com.google.guava/guava-testlib -->
+      <dependency>
+          <groupId>com.google.guava</groupId>
+          <artifactId>guava-testlib</artifactId>
+          <version>28.0-jre</version>
+          <!--<scope>test</scope>-->
+      </dependency>
+
+      <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
+      <dependency>
+          <groupId>org.apache.commons</groupId>
+          <artifactId>commons-lang3</artifactId>
+          <version>3.9</version>
+      </dependency>
+
+      <!-- https://mvnrepository.com/artifact/com.github.ben-manes.caffeine/caffeine -->
+      <dependency>
+          <groupId>com.github.ben-manes.caffeine</groupId>
+          <artifactId>caffeine</artifactId>
+          <version>2.8.0</version>
+      </dependency>
   
   	<!-- https://mvnrepository.com/artifact/junit/junit -->
 	<dependency>
 	    <groupId>junit</groupId>
 	    <artifactId>junit</artifactId>
 	    <version>4.12</version>
-	    <scope>test</scope>
+	    <!--<scope>test</scope>-->
 	</dependency>
 	
 	<dependency>
