--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,12 @@
   
   <dependencies>
 
+      <dependency>
+          <groupId>net.sourceforge.jexcelapi</groupId>
+          <artifactId>jxl</artifactId>
+          <version>2.6.10</version>
+      </dependency>
+
       <!-- https://mvnrepository.com/artifact/org.mybatis/mybatis -->
       <dependency>
           <groupId>org.mybatis</groupId>
