--- a/pom.xml
+++ b/pom.xml
@@ -7,10 +7,24 @@
   <dependencies>
 
       <dependency>
+          <groupId>org.redisson</groupId>
+          <artifactId>redisson</artifactId>
+          <version>3.13.1</version>
+      </dependency>
+
+      <dependency>
           <groupId>net.sourceforge.jexcelapi</groupId>
           <artifactId>jxl</artifactId>
           <version>2.6.10</version>
       </dependency>
+
+      <!-- https://mvnrepository.com/artifact/org.jsoup/jsoup -->
+      <dependency>
+          <groupId>org.jsoup</groupId>
+          <artifactId>jsoup</artifactId>
+          <version>1.10.2</version>
+      </dependency>
+
 
       <!-- https://mvnrepository.com/artifact/org.mybatis/mybatis -->
       <dependency>
@@ -30,6 +44,12 @@
           <groupId>com.google.guava</groupId>
           <artifactId>guava</artifactId>
           <version>28.0-jre</version>
+      </dependency>
+
+      <dependency>
+          <groupId>com.auth0</groupId>
+          <artifactId>java-jwt</artifactId>
+          <version>3.10.3</version>
       </dependency>
 
       <!-- https://mvnrepository.com/artifact/com.google.guava/guava-testlib -->
